Set up spacetime connection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@babel/runtime": "^7.28.4",
     "react": "^19.2.0",
     "react-console-emulator": "^5.0.2",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "spacetimedb": "1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
