Fixing some bugs'

--- a/firebase.json
+++ b/firebase.json
@@ -8,12 +8,8 @@
     ],
     "rewrites": [
       {
-        "source": "/",
-        "destination": "/landing.html"
-      },
-      {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/app.html"
       }
     ],
     "headers": [
