--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "firebase-tools": "^15.2.1",
     "globals": "^16.5.0",
+    "patch-package": "^8.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
