--- a/frontend/src/sounds/projectile-hit.json
+++ b/frontend/src/sounds/projectile-hit.json
@@ -1,11 +1,11 @@
 {
   "oldParams": true,
-  "wave_type": 3,
+  "wave_type": 2,
   "p_env_attack": 0,
   "p_env_sustain": 0.18,
   "p_env_punch": 0.395,
   "p_env_decay": 0.135,
-  "p_base_freq": 0.775,
+  "p_base_freq": 0.19,
   "p_freq_limit": 0,
   "p_freq_ramp": 0.19,
   "p_freq_dramp": -0.01,
@@ -25,5 +25,6 @@
   "p_hpf_ramp": -0.04,
   "sound_vol": 0.25,
   "sample_rate": 44100,
-  "sample_size": 8
+  "sample_size": 8,
+  "p_vib_delay": 0.008985805514883635
 }
